--- a/app/src/main/res/layout/activity_modifier_profil.xml
+++ b/app/src/main/res/layout/activity_modifier_profil.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/modifier_votre_profile"
-                android:fontFamily="@font/comfortaa_bold"
+                android:fontFamily="@font/carter_one"
                 android:textAlignment="center"
                 android:id="@+id/txt"
                 android:layout_centerVertical="true"
@@ -78,9 +78,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/pseudo"
+                android:drawableLeft="@drawable/ic_person_outline"
                 android:textAppearance="?android:textAppearance"
                 android:textColor="@color/colorTxt"
                 android:hint="@string/pseudo"
+                android:drawableTint="@color/colorTint"
+                android:drawablePadding="@dimen/tres_petite_marge"
                 android:inputType="text"
                 android:maxLines="1"
                 android:fontFamily="@font/comfortaa"
@@ -128,6 +131,9 @@
                 android:textAppearance="?android:textAppearance"
                 android:textColor="@color/colorTxt"
                 android:hint="@string/biographie"
+                android:drawableTint="@color/colorTint"
+                android:drawableLeft="@drawable/ic_short_text_black_24dp"
+                android:drawablePadding="@dimen/tres_petite_marge"
                 android:inputType="textMultiLine"
                 android:fontFamily="@font/comfortaa"
                 tools:targetApi="m" />
@@ -139,6 +145,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnModifier"
             android:text="@string/modifier"
+            android:fontFamily="@font/carter_one"
             android:backgroundTint="@color/c4"
             android:layout_marginTop="@dimen/tres_grande_marge"
             android:layout_marginLeft="@dimen/tres_petite_marge"
