--- a/app/src/main/res/layout/activity_add_photo.xml
+++ b/app/src/main/res/layout/activity_add_photo.xml
@@ -16,7 +16,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/default_img"
+        android:src="@drawable/add_picture"
         android:id="@+id/imgPreview"
         android:layout_below="@id/toolbar"
         android:adjustViewBounds="true"
@@ -43,7 +43,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/publier"
                 android:textAppearance="?android:textAppearance"
-                android:fontFamily="@font/comfortaa_bold"
+                android:fontFamily="@font/carter_one"
                 android:gravity="center"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"/>
@@ -56,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:id="@+id/addImg"
+        android:visibility="gone"
         app:tint="@color/colorBlanc"
         app:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
         android:src="@drawable/ic_add_box_black_24dp"/>
