--- a/app/src/main/res/layout/activity_post_place.xml
+++ b/app/src/main/res/layout/activity_post_place.xml
@@ -32,7 +32,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:src="@drawable/default_img"
+            android:src="@drawable/add_picture"
             android:id="@+id/imgPreview"/>
         <ProgressBar
             android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:fontFamily="@font/comfortaa_bold"
+                android:fontFamily="@font/carter_one"
                 android:gravity="center_vertical"
                 android:textStyle="italic"
                 android:textAppearance="?android:textAppearance"
@@ -186,7 +186,7 @@
                     android:layout_height="match_parent"
                     android:text="@string/publier"
                     android:textAppearance="?android:textAppearance"
-                    android:fontFamily="@font/comfortaa_bold"
+                    android:fontFamily="@font/carter_one"
                     android:gravity="center"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"/>
