--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -259,6 +259,7 @@
                 android:src="@drawable/ic_more_vert_black_24dp"
                 android:layout_centerVertical="true"
                 android:id="@+id/menuPhoto"
+                android:tint="@color/colorPrimaryDark"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="@dimen/tres_petite_marge"/>
         </RelativeLayout>
@@ -300,6 +301,7 @@
                 android:src="@drawable/ic_more_vert_black_24dp"
                 android:layout_centerVertical="true"
                 android:id="@+id/menuSons"
+                android:tint="@color/colorPrimaryDark"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="@dimen/tres_petite_marge"/>
         </RelativeLayout>
