--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -21,10 +21,12 @@
         android:orientation="vertical"
         android:layout_above="@+id/lineBottom"
         android:layout_below="@id/toolbar">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/lineTop">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
