--- a/app/src/main/res/layout/message_send.xml
+++ b/app/src/main/res/layout/message_send.xml
@@ -2,11 +2,13 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="35dp"
-    android:layout_height="35dp">
+    android:layout_height="35dp"
+    android:padding="@dimen/tres_petite_marge">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/sharee"
         android:layout_centerInParent="true"
+        android:paddingRight="@dimen/micro_petite_marge"
         android:id="@+id/imgSMS" />
 </RelativeLayout>
