--- a/app/src/main/res/layout/profile_menu_layout.xml
+++ b/app/src/main/res/layout/profile_menu_layout.xml
@@ -2,13 +2,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:padding="@dimen/micro_petite_marge">
 
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/default_img"
+        android:scaleType="centerCrop"
         android:id="@+id/imgUser" />
 
 </LinearLayout>
