ajustement du texte sur et les niveaux d'acces

--- a/app/src/main/res/layout/activity_modifier_profil.xml
+++ b/app/src/main/res/layout/activity_modifier_profil.xml
@@ -121,6 +121,7 @@
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_margin="@dimen/tres_petite_marge"
+            android:id="@+id/txtBio"
             app:hintTextAppearance="?android:textAppearance"
             android:textColorHint="@color/colorTxt">
 
