--- a/app/src/main/res/layout/activity_detail_artist.xml
+++ b/app/src/main/res/layout/activity_detail_artist.xml
@@ -187,19 +187,30 @@
             android:layout_marginBottom="@dimen/tres_petite_marge"/>
 
 
-        <TextView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/photos"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:drawableStart="@drawable/ic_camera_alt_black_24dp"
-            android:drawableTint="@color/colorBackFlou"
-            android:drawablePadding="@dimen/tres_petite_marge"
-            android:textAppearance="?android:textAppearance"
-            android:fontFamily="@font/carter_one"
-            android:layout_marginTop="@dimen/tres_petite_marge"
-            android:layout_marginBottom="@dimen/tres_petite_marge"/>
+            android:orientation="horizontal"
+            android:layout_margin="@dimen/micro_petite_marge"
+            android:gravity="center">
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:adjustViewBounds="true"
+                app:lottie_rawRes="@raw/galery"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/photos"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:drawablePadding="@dimen/micro_petite_marge"
+                android:textAppearance="?android:textAppearance"
+                android:fontFamily="@font/carter_one"
+                android:layout_margin="@dimen/tres_petite_marge"/>
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
@@ -207,19 +218,30 @@
             android:id="@+id/recyclePhoto"
             android:layout_marginStart="@dimen/tres_grande_marge"/>
 
-        <TextView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/music"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:drawableStart="@drawable/ic_music_note_black_24dp"
-            android:drawableTint="@color/colorBackFlou"
-            android:drawablePadding="@dimen/tres_petite_marge"
-            android:textAppearance="?android:textAppearance"
-            android:fontFamily="@font/carter_one"
-            android:layout_marginTop="@dimen/tres_petite_marge"
-            android:layout_marginBottom="@dimen/tres_petite_marge"/>
+            android:orientation="horizontal"
+            android:layout_margin="@dimen/micro_petite_marge"
+            android:gravity="center">
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:adjustViewBounds="true"
+                app:lottie_rawRes="@raw/ecouteur"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/music"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:drawablePadding="@dimen/tres_petite_marge"
+                android:textAppearance="?android:textAppearance"
+                android:fontFamily="@font/carter_one"
+                android:layout_margin="@dimen/micro_petite_marge"/>
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
