--- a/app/src/main/res/layout/activity_detail_place.xml
+++ b/app/src/main/res/layout/activity_detail_place.xml
@@ -169,21 +169,34 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <TextView
-                            android:layout_width="match_parent"
+                        <LinearLayout
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/photos"
-                            android:layout_marginLeft="@dimen/micro_petite_marge"
-                            android:layout_marginRight="@dimen/micro_petite_marge"
-                            android:layout_gravity="center_vertical"
-                            android:gravity="center_vertical"
-                            android:drawableStart="@drawable/ic_camera_alt_black_24dp"
-                            android:drawableTint="@color/colorBackFlou"
-                            android:drawablePadding="@dimen/tres_petite_marge"
-                            android:textAppearance="?android:textAppearanceLarge"
-                            android:fontFamily="@font/carter_one"
-                            android:layout_marginTop="@dimen/tres_petite_marge"
-                            android:layout_marginBottom="@dimen/tres_petite_marge"/>
+                            android:orientation="horizontal"
+                            android:layout_margin="@dimen/micro_petite_marge"
+                            android:gravity="center">
+                            <com.airbnb.lottie.LottieAnimationView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:adjustViewBounds="true"
+                                app:lottie_rawRes="@raw/galery"
+                                app:lottie_autoPlay="true"
+                                app:lottie_loop="true"/>
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@string/photos"
+                                android:layout_marginLeft="@dimen/micro_petite_marge"
+                                android:layout_marginRight="@dimen/micro_petite_marge"
+                                android:layout_gravity="center_vertical"
+                                android:gravity="center_vertical"
+                                android:drawablePadding="@dimen/tres_petite_marge"
+                                android:textAppearance="?android:textAppearanceLarge"
+                                android:fontFamily="@font/carter_one"
+                                android:layout_marginTop="@dimen/tres_petite_marge"
+                                android:layout_marginBottom="@dimen/tres_petite_marge"/>
+                        </LinearLayout>
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
