--- a/app/src/main/res/layout/fragment_accueil.xml
+++ b/app/src/main/res/layout/fragment_accueil.xml
@@ -50,11 +50,12 @@
                     android:layout_weight="1"
                     android:gravity="center|end"
                     android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+                    android:drawableTint="@color/colorPrimaryDark"
                     android:layout_gravity="center_vertical"
                     android:textSize="@dimen/tres_petite_police"
                     android:id="@+id/seeMore"
                     android:textAppearance="?android:textAppearance"
-                    android:fontFamily="@font/ubuntu_mono_bold"/>
+                    android:fontFamily="@font/carter_one"/>
 
             </LinearLayout>
 
@@ -63,14 +64,29 @@
                 android:layout_height="140dp"
                 android:id="@+id/recycleArtiste"
                 android:layout_margin="@dimen/micro_petite_marge"/>
-            <TextView
-                android:layout_width="match_parent"
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/file_d_actualit"
-                android:layout_margin="@dimen/tres_petite_marge"
-                android:layout_gravity="center_vertical"
-                android:textAppearance="?android:textAppearance"
-                android:fontFamily="@font/carter_one"/>
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/micro_petite_marge"
+                android:gravity="center">
+                <com.airbnb.lottie.LottieAnimationView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:adjustViewBounds="true"
+                    app:lottie_rawRes="@raw/list"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/file_d_actualit"
+                    android:layout_margin="@dimen/tres_petite_marge"
+                    android:layout_gravity="center_vertical"
+                    android:textAppearance="?android:textAppearance"
+                    android:fontFamily="@font/carter_one"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
