--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/toolbar"
+        android:layout_marginBottom="@dimen/micro_petite_marge"
         android:layout_alignParentTop="true"
         app:titleTextColor="@color/colorPrimaryDark"
         app:titleTextAppearance="?android:textAppearance" >
@@ -55,7 +56,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imgSelected"
-        android:layout_margin="@dimen/tres_petite_marge"
         android:layout_below="@id/toolbar"
         android:layout_above="@id/lineBottom"
         android:src="@drawable/ic_launcher_background"
@@ -65,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="@dimen/micro_petite_marge"
         android:id="@+id/lineBottom"
         android:layout_alignParentBottom="true">
         <com.borjabravo.readmoretextview.ReadMoreTextView
