--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -344,8 +344,9 @@
                     android:id="@+id/img_404_media"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:id="@+id/recycleMusic"
+                    android:layout_marginBottom="@dimen/tres_petite_taille"
                     android:layout_marginStart="@dimen/tres_grande_marge"/>
             </RelativeLayout>
 
@@ -354,34 +355,41 @@
         <!-- vue des utilisateur lambda-->
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="@dimen/micro_petite_marge"
-            android:gravity="center">
-            <com.airbnb.lottie.LottieAnimationView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:adjustViewBounds="true"
-                app:lottie_rawRes="@raw/list"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Mes publications"
-                android:drawablePadding="@dimen/tres_petite_marge"
-                android:textAppearance="?android:textAppearance"
-                android:fontFamily="@font/carter_one"
-                android:layout_margin="@dimen/tres_petite_marge"/>
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/recycleAllPost"
-            android:layout_below="@id/toolbar"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/lineBottom">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/micro_petite_marge"
+                android:gravity="center">
+                <com.airbnb.lottie.LottieAnimationView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:adjustViewBounds="true"
+                    app:lottie_rawRes="@raw/list"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Mes publications"
+                    android:drawablePadding="@dimen/tres_petite_marge"
+                    android:textAppearance="?android:textAppearance"
+                    android:fontFamily="@font/carter_one"
+                    android:layout_margin="@dimen/tres_petite_marge"/>
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/recycleAllPost"
+                android:layout_below="@id/toolbar"/>
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
