--- a/app/src/main/res/layout/activity_modifier_profil.xml
+++ b/app/src/main/res/layout/activity_modifier_profil.xml
@@ -46,7 +46,7 @@
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/default_img"
+                android:src="@drawable/imgdefault"
                 android:id="@+id/imgUser"/>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
