--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -19,12 +19,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:padding="@dimen/micro_petite_marge"
             android:id="@+id/lineTop">
-            <ImageView
+            <com.mikhaellopez.circularimageview.CircularImageView
                 android:layout_width="@dimen/petite_taille"
                 android:layout_height="@dimen/petite_taille"
                 android:id="@+id/imgUser"
-                android:padding="@dimen/micro_petite_marge"
+                app:civ_border_width="0.5dp"
                 android:src="@mipmap/ic_launcher_round"/>
             <LinearLayout
                 android:layout_width="match_parent"
