--- a/app/src/main/res/layout/item_artiste_music.xml
+++ b/app/src/main/res/layout/item_artiste_music.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="@dimen/micro_petite_marge"
     android:id="@+id/item_artiste">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imgArtist"
+        app:civ_border_width="1dp"
         android:adjustViewBounds="true"
         android:src="@mipmap/ic_launcher_round"/>
 
