--- a/app/src/main/res/layout/profile_menu_layout.xml
+++ b/app/src/main/res/layout/profile_menu_layout.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="40dp"
     android:layout_height="40dp"
     android:padding="@dimen/micro_petite_marge">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/default_img"
         android:scaleType="centerCrop"
+        app:civ_border_width="0.5dp"
         android:id="@+id/imgUser" />
 
 </LinearLayout>
