--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -39,7 +39,7 @@
                 android:layout_weight="1"
                 android:textColor="@color/colorBtn"
                 android:textAppearance="?android:textAppearanceSmall"
-                android:fontFamily="@font/comfortaa_bold"
+                android:fontFamily="@font/carter_one"
                 android:id="@+id/txtAlbum"/>
 
             <ImageView
