--- a/app/src/main/res/layout/item_artiste_music.xml
+++ b/app/src/main/res/layout/item_artiste_music.xml
@@ -9,9 +9,10 @@
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/large_taille"
         android:id="@+id/imgArtist"
         app:civ_border_width="1dp"
+        android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:src="@mipmap/ic_launcher_round"/>
 
@@ -22,7 +23,7 @@
         android:layout_margin="@dimen/micro_petite_marge"
         android:textSize="@dimen/tres_petite_police"
         android:textAppearance="?android:textAppearanceSmall"
-        android:fontFamily="@font/comfortaa_light"
+        android:fontFamily="@font/carter_one"
         android:textAlignment="center"
         android:text="@string/pseudo"/>
 
