--- a/app/src/main/res/layout/item_morceau.xml
+++ b/app/src/main/res/layout/item_morceau.xml
@@ -37,7 +37,7 @@
                 android:text="@string/app_name"
                 android:textColor="@color/colorBtn"
                 android:textAppearance="?android:textAppearanceSmall"
-                android:fontFamily="@font/comfortaa_bold"
+                android:fontFamily="@font/carter_one"
                 android:id="@+id/txtTitre"/>
 
             <TextView
@@ -48,7 +48,7 @@
                 android:textSize="@dimen/tres_petite_police"
                 android:textColor="@color/colorMenu"
                 android:textAppearance="?android:textAppearanceSmall"
-                android:fontFamily="@font/comfortaa_light"
+                android:fontFamily="@font/ubuntu_mono_bold"
                 android:id="@+id/txtArtiste"/>
 
         </LinearLayout>
